# domag_tasks

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  cmakeDebug  cmakeRelease  cmakeWithBuildType  test_all.sh
Code/: CMakeLists.txt
Code/Main/Src/: Main.cpp
Code/Main/inc/: DatabaseGuard.hpp  DomagInitializer.h  DomagRunner.h
Code/Main/src/: DatabaseGuard.cpp  DomagInitializer.cpp  DomagRunner.cpp  Main.cpp  main.cpp
Code/cui/: ConsoleContainersPresenter.hpp
Code/cui/include/presenters/: ConsoleContainersPresenter.hpp
Code/depot/inc/: AbstractContainer.h  AbstractContainer.hpp  AddNewContainerProcedure.hpp  Article.h  Article.hpp  ConsumeHistory.h  ConsumedItems.h  ConsumedItems.hpp  Container.h  Container.hpp  ContainerCatalog.h  ContainerCatalog.hpp  DepotSerializer.h  DepotSerializer.hpp  HierarchicalClass.h  HierarchicalClass.hpp  HomeContainerCatalog.h  HomeContainerCatalog.hpp  Item.h  Item.hpp  ItemsContainer.h  ItemsContainer.hpp  RemoveContainerProcedure.hpp  Storable.h  Storable.hpp  Thing.h
Code/depot/src/: AddNewContainerProcedure.cpp  Article.cpp  ConsumeHistory.cpp  ConsumedItems.cpp  Container.cpp  DepotSerializer.cpp  HomeContainerCatalog.cpp  Item.cpp  ItemsContainer.cpp  RemoveContainerProcedure.cpp  Thing.cpp
Code/gui/: CMakeLists.txt
Code/gui/generators/: gladeToStringGenerator.sh
Code/gui/include/gui/: Application.hpp  Builder.hpp  ContainerColumnModel.hpp  ContainersTreeView.hpp  MainWindow.hpp  NewContainerDialog.hpp
Code/gui/resources/: domagMainWindow.glade  domagMainWindow.glade~
Code/gui/src/: Application.cpp  Builder.cpp  ContainerColumnModel.cpp  ContainersTreeView.cpp  MainWindow.cpp  NewContainerDialog.cpp
Code/libdomagcli/: CMakeLists.txt
Code/libdomagcli/include/libdomagcli/: CliCallback.hpp  CliStarter.hpp
Code/libdomagcli/src/: CliCallback.cpp  CliStarter.cpp
Code/ui/: CMakeLists.txt  ContainersPresenter.hpp
Code/ui/include/presenters/: ContainersPresenter.hpp  Presenters.hpp
Debug/: CMakeLists.txt
Resources/cli/: domag.xml
Src/: CMakeLists.txt  Example.cpp
Src/GmockTest/: Adder.cpp  Adder.h
Src/Main/: Main.cpp
Test/: CMakeLists.txt  ExampleTest.cpp
Test/inc/GMockTetsMocks/: AdderMock.h
Test/inc/depotMocks/: ArticleMock.h  ArticleMock.hpp  ItemMock.h  ItemMock.hpp  MockContainer.hpp  MockContainerCatalog.hpp  MockHierarchicalItemsContainer.hpp  ThingMock.h
Test/src/: mainTest.cpp
Test/src/ExampleTest/: ExampleTest.cpp
Test/src/depotTests/: AddNewContainerProcedureTest.cpp  ArticleTest.cpp  ConsumeHistoryTester.cpp  ConsumedItemsTest.cpp  ContainerTest.cpp  DepotSerializerTest.cpp  HomeContainerCatalogTest.cpp  ItemTest.cpp  RemoveContainerProcedureTest.cpp  ThingTest.cpp
android/: .gitignore  build.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/example/domag/: ExampleInstrumentedTest.kt  MainActivityUiTest.kt  NotificationsUiTest.kt
android/app/src/androidTest/java/com/example/domag/UiTestUtils/: AppActions.kt  AtPositionMatcher.kt  Constants.kt  Date.kt  HasNElementsMatcher.kt  TasksActions.kt  TasksValidations.kt  Texts.kt
android/app/src/androidTest/java/com/kn65op/domag_tasks/: MainActivityUiTest.kt  NotificationsUiTest.kt
android/app/src/androidTest/java/com/kn65op/domag_tasks/UiTestUtils/: AppActions.kt  AtPositionMatcher.kt  Constants.kt  Date.kt  HasNElementsMatcher.kt  TasksActions.kt  TasksValidations.kt  Texts.kt
android/app/src/androidTest/java/io/github/kn65op/domag_tasks/: MainActivityUiTest.kt  NotificationsUiTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/domag/: MainActivity.kt
android/app/src/main/java/com/example/domag/gui/: AddTaskActivity.kt  DatePickerFragment.kt  MainActivity.kt  SimpleTaskEditActivity.kt  TaskEditActivity.kt  TasksAdapter.kt
android/app/src/main/java/com/example/domag/notifications/: Alarm.kt  NotificationChannels.kt  NotificationId.kt  Notifications.kt  RestartAlarmsOnBoot.kt  TodayAndPastTasksNotification.kt  TodayTaskNotification.kt
android/app/src/main/java/com/example/domag/storage/: DataStorage.kt  DataStorageFactory.kt  DriveDataStorage.kt
android/app/src/main/java/com/example/domag/tasks/: DeadlineCalculationStrategy.kt  DeadlineCalculationStrategyFactory.kt  DeadlineCalculationStrategySerializer.kt  DeadlineCalculationStrategyType.kt  FromNowDeadlineCalculationStrategy.kt  FromPreviousDeadlineCalculationStrategy.kt  JsonTaskDeserializer.kt  JsonTaskSerializer.kt  NoDeadlineTask.kt  RecurringTask.kt  SimpleTask.kt  SortedByDoneAndDateTasks.kt  Task.kt  TaskTime.kt  TaskUtils.kt  Tasks.kt  TasksDeserializer.kt
android/app/src/main/java/com/example/domag/utils/: ZoneDataTimeWithoutZoneChangeSerializer.kt  ZoneDateTimeSerializer.kt
android/app/src/main/java/com/kn65op/domag_tasks/gui/: DatePickerFragment.kt  MainActivity.kt  TaskEditActivity.kt  TasksAdapter.kt
android/app/src/main/java/com/kn65op/domag_tasks/notifications/: Alarm.kt  NotificationChannels.kt  NotificationId.kt  Notifications.kt  RestartAlarmsOnBoot.kt  TodayAndPastTasksNotification.kt
android/app/src/main/java/com/kn65op/domag_tasks/storage/: DataStorage.kt  DataStorageFactory.kt  DriveDataStorage.kt
android/app/src/main/java/com/kn65op/domag_tasks/tasks/: DeadlineCalculationStrategy.kt  DeadlineCalculationStrategyFactory.kt  JsonTaskDeserializer.kt  (+13 more)
android/app/src/main/res/layout/: activity_add_task.xml  activity_main.xml  main_navigation_view.xml  recurring_task_edit.xml  simple_task_edit.xml  task_edit.xml  task_view.xml
android/app/src/main/res/menu/: edit_task_menu.xml  menu_main.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/main/res/values-pl-rPL/: strings.xml
android/app/src/test/java/android/util/: Log.java
android/app/src/test/java/com/example/domag/: ExampleUnitTest.kt
android/app/src/test/java/com/kn65op/domag_tasks/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
test-resources/: example-database.domag
(+104 files in other folders)
